--- a/about/styles/about.css
+++ b/about/styles/about.css
@@ -78,7 +78,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
    
 }
 
@@ -123,7 +123,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box2{
@@ -135,7 +135,7 @@ display: none;
     justify-content: space-between;
     margin: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.167), 0 0 40px
-    rgba(0, 0, 0, 0.167), 0 0 80px rgba(0, 0, 0, 0.167);
+    #0000002b, 0 0 80px #0000002b;
 }
 
 .n-b2{
@@ -167,7 +167,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box3{
@@ -211,7 +211,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box4{
@@ -255,7 +255,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 
 }
 
@@ -300,7 +300,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box6{
@@ -344,7 +344,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box7{
@@ -388,7 +388,7 @@ display: none;
     justify-content: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.327), 0 0 40px
     rgba(255, 255, 255, 0.345), 0 0 80px rgba(255, 255, 255, 0.345);
-    background-color: black;
+    background-color: #505050;
 }
 
 .content-box8{
